Add Google AdSense meta tag to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Patas.lk - Your Pet Care Solution" />
+
+    <!-- Google AdSense Meta Tag -->
+    <meta name="google-adsense-account" content="ca-pub-2131468953574724">
+
     <title>Patas.lk</title>
   </head>
   <body>
