Update title in index.html for improved branding and clarity

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Google AdSense Meta Tag -->
     <meta name="google-adsense-account" content="ca-pub-2131468953574724">
 
-    <title>Patas.lk - Your Pet Care Solution</title>
+    <title>Patas.lk - Your Trusted Service Provider Platform</title>
     
     <!-- Structured Data for SEO -->
     <script type="application/ld+json">
