Refactor website content and structure for DiabAdvise, enhancing user experience and SEO with updated meta tags, improved navigation, and a new app download link.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Patas.lk - Your comprehensive pet care platform offering veterinary services, pet supplies, grooming, and emergency assistance for all your pet needs." />
-    <meta name="keywords" content="pet care, veterinary, pet supplies, pet grooming, emergency pet care, Sri Lanka" />
+    <meta name="description" content="Patas.lk - Your comprehensive service provider platform offering professional services for all your needs." />
+    <meta name="keywords" content="professional services, plumbing, electrical, tutoring, construction, Sri Lanka" />
     <meta name="author" content="Patas.lk" />
     
     <!-- Open Graph / Social Media Meta Tags -->
-    <meta property="og:title" content="Patas.lk - Your Pet Care Solution" />
-    <meta property="og:description" content="Complete pet care services including veterinary consultations, pet supplies, grooming and emergency assistance." />
+    <meta property="og:title" content="Patas.lk - Your Professional Service Solution" />
+    <meta property="og:description" content="Complete professional services including plumbing, electrical work, tutoring, and construction assistance." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://patas.lk" />
     <meta property="og:image" content="/logo.png" />
@@ -27,7 +27,7 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Patas.lk",
-      "description": "Complete pet care services platform in Sri Lanka",
+      "description": "Complete professional service provider platform in Sri Lanka",
       "url": "https://patas.lk",
       "logo": "/logo.png",
       "sameAs": [
@@ -44,8 +44,8 @@
     <div id="root">
       <!-- Basic content that will be replaced by React -->
       <header style="padding: 20px; text-align: center;">
-        <h1>Patas.lk - Your Pet Care Solution</h1>
-        <p>Loading your complete pet care platform...</p>
+        <h1>Patas.lk - Your Professional Service Solution</h1>
+        <p>Loading your complete service provider platform...</p>
       </header>
     </div>
     
@@ -54,17 +54,17 @@
       <div style="max-width: 800px; margin: 0 auto; padding: 20px;">
         <header>
           <h1>Welcome to Patas.lk</h1>
-          <p>Your comprehensive pet care solution in Sri Lanka</p>
+          <p>Your comprehensive service provider solution in Sri Lanka</p>
         </header>
         <main>
           <section>
             <h2>Our Services</h2>
             <ul>
-              <li>Veterinary consultations</li>
-              <li>Pet supplies and food</li>
-              <li>Grooming services</li>
-              <li>Emergency pet care</li>
-              <li>Pet adoption services</li>
+              <li>Plumbing services</li>
+              <li>Electrical work</li>
+              <li>Tutoring services</li>
+              <li>Construction services</li>
+              <li>Professional assistance</li>
             </ul>
           </section>
           <section>
